[package]
name = "autocomplete"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.210", features = ["derive"]}
serde-wasm-bindgen = "0.6.5"
# serde_bare = "0.5.0"
# serde_json = "1.0.128"
wasm-bindgen = "0.2.95"
